[package]
name = "rust-jsonld"
version = "0.1.0"
authors = ["pmuehleder <peter.muehleder@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }